# tankbet

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  Procfile.dev  RESEARCH.md  TODO.md  dev.sh  fly.toml  package.json  parity_trace.json  pnpm-lock.yaml  vitest.workspace.ts
.claude/: settings.local.json
.claude/commands/: test-rooms.md  test.md
.claude/skills/: tensor-launch.md  tensor-refresh.md  train.md
apps/backend/: package.json  prisma.config.ts  railway.json  railway.toml
apps/backend/prisma/: schema.prisma  seed.ts  tsconfig.json
apps/backend/src/: drain.ts  environment.ts  logger.ts  prisma.ts  server.ts  stripe.ts
apps/backend/src/bot/: BotPlayer.ts  action-table.ts  inference.ts  observation.ts  tank-bot-weights.json
apps/backend/src/jobs/: donationSummary.ts  taxReminder.ts
apps/backend/src/middleware/: auth.ts
apps/backend/src/rooms/: BaseTankRoom.ts  PracticeRoom.ts  TankRoom.ts  TankRoomState.ts
apps/backend/test/: TankRoom.test.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/web/src/: App.tsx  config.ts  env.d.ts  index.css  main.tsx
docs/: DDQN_TRAINING_GUIDE.md  PPO_ARCHITECTURE.md
scripts/: toxiproxy-setup.sh
training/: OBSERVATIONS.md  action_table.py  ddqn_trainer.py  debug_bfs.py  debug_bfs_path.py  debug_los.py  debug_obs.py  debug_obs_visual.py  dqn.py  experience_replay.py  export_weights.py  main.py  parity_check.py  phase_config.py  ppo.py  ppo_trainer.py  pyproject.toml  rollout_buffer.py  sweep.py  tank_env.py
(+47 files in other folders)
